--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-cn">
 <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title>Adaptive Placeholder – 自适应的占位符效果</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -9,7 +9,7 @@
     <div style="width:400px;height:100px;margin:300px auto">
         <form>
             <div>
-                <input required='' type='text'>
+                <input required='' type='text'/>
                 <label alt='请输入名称' placeholder='输入名称'></label>
             </div>
             <div>
